Fix for WMS-14517: Popover widget: When title is a bit lengthy and popover content is also more then we see content overflow from popup in run mode

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -418,6 +418,7 @@ html, body {
   min-width: 50px;
   min-height: 50px;
   padding: 0;
+  overflow: auto;
   .popover-start, .popover-end {
     width: 0;
     padding: 0;
